Can't change viewport text overlay color #124549

Closed
opened 2024-07-11 20:05:01 +02:00 by CHET · 19 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 512.15

Blender Version
Broken: version: 4.2.0 Release Candidate, branch: blender-v4.2-release, commit date: 2024-07-10 19:59, hash: a2ba481c7110
Worked: 4.1.1, branch: blender-v4.1-release, commit date: 2024-04-15 15:11, hash: e1743a0317

Short description of error
The text color in the viewport info doesn't change in version 4.2.
In 4.1.1 - work

Exact steps for others to reproduce the error
Open Settings, go to Themes - 3D Viewport - Theme Space - Text Highlight.
Try changing the color.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 512.15 **Blender Version** Broken: version: 4.2.0 Release Candidate, branch: blender-v4.2-release, commit date: 2024-07-10 19:59, hash: `a2ba481c7110` Worked: 4.1.1, branch: blender-v4.1-release, commit date: 2024-04-15 15:11, hash: e1743a0317bc **Short description of error** The text color in the viewport info doesn't change in version 4.2. In 4.1.1 - work **Exact steps for others to reproduce the error** Open Settings, go to Themes - 3D Viewport - Theme Space - Text Highlight. Try changing the color.
CHET added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-07-11 20:05:02 +02:00
Iliya Katushenock added the
Interest
Viewport & EEVEE
Interest
User Interface
labels 2024-07-11 20:05:50 +02:00
Member

I believe this behaviour is changed intentionally to provide better readability/contrast in the viewport: #121383

cc @Harley @aras_p

I believe this behaviour is changed intentionally to provide better readability/contrast in the viewport: #121383 cc @Harley @aras_p
YimingWu added
Module
User Interface
Status
Needs Info from Developers
and removed
Status
Needs Triage
labels 2024-07-12 06:03:28 +02:00
YimingWu changed title from Interface bug to Can't change viewport text overlay color 2024-07-12 06:04:51 +02:00

I don't remember what is the final logic that Harley ended up with, but yes, the 3D view overlay text is no longer driven by "text highlight" theme color. Instead it it something like "black or white, depending on background color".

I don't remember what is the final logic that Harley ended up with, but yes, the 3D view overlay text is no longer driven by "text highlight" theme color. Instead it it something like "black or white, depending on background color".
Author

I don't understand what is written! the text is not readable, I want to customize the text as convenient for me as before. Why do developers break something that worked well?

I don't understand what is written! the text is not readable, I want to customize the text as convenient for me as before. Why do developers break something that worked well?
Author

I don't remember what is the final logic that Harley ended up with, but yes, the 3D view overlay text is no longer driven by "text highlight" theme color. Instead it it something like "black or white, depending on background color".

My text on a gray background does not turn white, and the big minus is that this cannot even be changed

> I don't remember what is the final logic that Harley ended up with, but yes, the 3D view overlay text is no longer driven by "text highlight" theme color. Instead it it something like "black or white, depending on background color". My text on a gray background does not turn white, and the big minus is that this cannot even be changed
Author

This is not "ok"

This is not "ok"
Member

This is not "ok"

Please include a capture of how it looked for you before. As in just load an older version of blender with the theme you used and make a similar capture to above so they can be compared.

> This is not "ok" Please include a capture of how it looked for you before. As in just load an older version of blender with the theme you used and make a similar capture to above so they can be compared.
Author

This is not "ok"

Please include a capture of how it looked for you before. As in just load an older version of blender with the theme you used and make a similar capture to above so they can be compared.

What I liked about Blender is that themes could be completely customized to be comfortable for both vision and work. I don't understand why automate things where it's not needed?

> > This is not "ok" > > Please include a capture of how it looked for you before. As in just load an older version of blender with the theme you used and make a similar capture to above so they can be compared. What I liked about Blender is that themes could be completely customized to be comfortable for both vision and work. I don't understand why automate things where it's not needed?
Author

I would like to continue customizing the interface colors to my taste, or at least have the option to manually adjust them, while those who prefer can switch to automatic mode.

I would like to continue customizing the interface colors to my taste, or at least have the option to manually adjust them, while those who prefer can switch to automatic mode.
Member

For sure. The ideal would be for everything to be set to taste via the themes.

But we struggled for years to increase the readability of the overlay text. With the difficulty that we were wanting to have increased contrast regardless of the viewport colors or the color of content that could be below it.

We finally found a solution that works much better in almost all cases. We have added a new "outline" type of shadow to the text shader and we are creating the text color and shadow color to give maximum contrast from the 3D View background.

The result is that we (finally) have that text readable in almost all circumstances. But, unfortunately, this method is incompatible with allowing theme coloring.

For sure. The ideal would be for everything to be set to taste via the themes. But we struggled for years to increase the readability of the overlay text. With the difficulty that we were wanting to have increased contrast regardless of the viewport colors or the color of content that could be below it. We finally found a solution that works much better in almost all cases. We have added a new "outline" type of shadow to the text shader and we are creating the text color and shadow color to give maximum contrast from the 3D View background. The result is that we (finally) have that text readable in almost all circumstances. But, unfortunately, this method is incompatible with allowing theme coloring.
Author

Readable? In another theme, I've already seen white text on a white background, which is absolutely unreadable, and green text on a white background—also unreadable. You said that this was "okay." Please don't do this.

Previously, everything was fine, and you could change the color to your personal taste and adjust the overlay font to your liking! Now, all you've done is create an inconvenient algorithm that doesn't work correctly and can't even be adjusted—this is the worst part! Visually, it doesn't differ from the previous version. For the text to be readable, there must be enough spacing between the letters so they don't merge into one. Allow users to adjust the shadows and colors to their preference, or make it configurable at least! There's no need to reinvent the wheel.

Readable? In another theme, I've already seen white text on a white background, which is absolutely unreadable, and green text on a white background—also unreadable. You said that this was "okay." Please don't do this. Previously, everything was fine, and you could change the color to your personal taste and adjust the overlay font to your liking! Now, all you've done is create an inconvenient algorithm that doesn't work correctly and can't even be adjusted—this is the worst part! Visually, it doesn't differ from the previous version. For the text to be readable, there must be enough spacing between the letters so they don't merge into one. Allow users to adjust the shadows and colors to their preference, or make it configurable at least! There's no need to reinvent the wheel.
Member

A few comments ago I asked you to provide a screen capture of a previous version with it themed as you like it, so it can be compared to how it is now. As in please show me an example of it looking better before.

A few comments ago I asked you to provide a screen capture of a previous version with it themed as you like it, so it can be compared to how it is now. As in please show me an example of it looking better before.

@Harley maybe this would work: 1) overlay text color is driven by the same theme color as before ("active text"), but 2) the text outline color is computed automatically from that. If the text color is bright enough, then outline is black, but if text color is dark then outline is white.

As far as I can tell, this would still address the primary issue with previous approach (where if you set a dark enough text color, the black drop shadow makes everything look "mushy"), while allowing theming the overlay text color just like before.

@Harley maybe this would work: 1) overlay text color is driven by the same theme color as before ("active text"), but 2) the text outline color is computed automatically from that. If the text color is bright enough, then outline is black, but if text color is dark then outline is white. As far as I can tell, this would still address the primary issue with previous approach (where if you set a dark enough text color, the black drop shadow makes everything look "mushy"), while allowing theming the overlay text color just like before.
Member

Sitting on the deck with a G&T, so not running at full cycles.

But I think the problem we were both struggling with is that the theme text color does not change as the background of the 3D View changes. Which is why we based the overlay color and shadow on that. Otherwise we could get a nice contrast-y overlay until you changed to Grease Pencil and then it looked terrible on that white background.

Sitting on the deck with a G&T, so not running at full cycles. But I think the problem we were both struggling with is that the theme text color does not change as the background of the 3D View changes. Which is why we based the overlay color and shadow on that. Otherwise we could get a nice contrast-y overlay until you changed to Grease Pencil and then it looked terrible on that white background.
Member

At this point I'd suggest just add a dark semi transparent square background 🤔

At this point I'd suggest just add a dark semi transparent square background 🤔
Author

A few comments ago I asked you to provide a screen capture of a previous version with it themed as you like it, so it can be compared to how it is now. As in please show me an example of it looking better before.

In the very first post, there's a pinned video showing how it looks in both versions. You are trying to convince me, as a user, that I need something that either doesn't work or works poorly. I want the old settings that allow me to customize the interface to my liking

> A few comments ago I asked you to provide a screen capture of a previous version with it themed as you like it, so it can be compared to how it is now. As in please show me an example of it looking better before. In the very first post, there's a pinned video showing how it looks in both versions. You are trying to convince me, as a user, that I need something that either doesn't work or works poorly. I want the old settings that allow me to customize the interface to my liking
Bart van der Braak added
Type
Bug
and removed
Type
Report
labels 2024-08-14 12:57:05 +02:00

So what's the dev's stance on this issue? As others have mentioned already, I too find it highly diminishing for efficient workflow. My suggestion is to just roll it back, until you get the new code running properly.

So what's the dev's stance on this issue? As others have mentioned already, I too find it highly diminishing for efficient workflow. My suggestion is to just roll it back, until you get the new code running properly.
Member

I'd say to have an option to toggle fixed color with shadow or use this dynamic thing. @Harley / @pablovazquez any inputs?

I'd say to have an option to toggle fixed color with shadow or use this dynamic thing. @Harley / @pablovazquez any inputs?
Member

We'll try to talk about this tomorrow in our UI meeting and see if any changes should or can be made.

We'll try to talk about this tomorrow in our UI meeting and see if any changes should or can be made.

@Harley I made my attempt at how to solve this, i.e. making overlay text color be themable again, while avoiding "2D animation template is white background with white text" case. See PR #127389

@Harley I made my attempt at how to solve this, i.e. making overlay text color be themable again, while avoiding "2D animation template is white background with white text" case. See PR #127389
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2024-09-12 04:25:17 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#124549
No description provided.