Fix #124549: can't customize overlay text color

Improvements to how text colors and shadows are determined for the
3D View overlays. Starting with the theme's text highlight color, it
is lightened or darkened if necessary to give contrast with the
background. Then a black or white shadow is used depending on text
color.

Pull Request: https://projects.blender.org/blender/blender/pulls/127389